--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "789789",
+  "name": "test",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Richion/789789.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Richion/789789/issues"
-  },
-  "homepage": "https://github.com/Richion/789789#readme"
+  "dependencies": {
+    "@line/bot-sdk": "^7.1.0",
+    "cheerio": "^1.0.0-rc.3",
+    "express": "^4.17.1",
+    "linebot": "^1.6.1",
+    "request": "^2.88.2"
+  }
 }
